cabal-version:      2.4
name:               polymorphic-imperative-session-types
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marius Weidner
maintainer:         weidner@cs.uni-freiburg.de

executable PolyVGR
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Ast, Constraints, Context, Conversion, Equality, Eval, Kinding, Parser, Pretty, Result, State, Substitution, Typing
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      parsec ^>=3.1.15.1,
                      random ^>=1.2.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
