cabal-version:      2.4
name:               polymorphic-imperative-session-types
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marius Weidner
maintainer:         weidner@cs.uni-freiburg.de

executable polymorphic-imperative-session-types
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Ast, Result, Equality, Kinding, Context, Constraints
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
